Keep previous_in_flow across shadow boundary.

For some reason we created a new AttachContext entering a ShadowRoot for
AttachLayoutTree. If the shadow host was display:contents we would lose
the previous_in_flow from the shadow tree checking the need for
whitespace LayoutObject for shadow host siblings.

Created a common space-separated words expectation for css.

Bug: 901323
Change-Id: Ib2fa54d55923c0497ff8e96c5010e68b01570881
Reviewed-on: https://chromium-review.googlesource.com/c/1314589
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604910}
Former-commit-id: 1d064e771eff76425807c1efd3908b395954b453